tests/test_struct/good/simple.catala_en
## Article

```catala
declaration structure S:
  data x content integer
  data y content integer

declaration scope A:
  context output s content S
  context output z content integer

scope A:
  definition s equals S {
    -- x : 1
    -- y : 2
  }
  definition z equals s.x + s.y
```



```catala-test-inline
$ catala Typecheck --check-invariants
[RESULT] Invariant typing_defaults checked. result: [43/43]
[RESULT] Invariant match_inversion checked. result: [0/0]
[RESULT] Invariant app_inversion checked. result: [2/2]
[RESULT] Invariant no_return_a_function checked. result: [0/0]
[RESULT] Invariant no_partial_evaluation checked. result: [2/2]
[RESULT] Invariant default_no_arrow checked. result: [6/6]
[RESULT] Typechecking successful!
```

```catala-test-inline
$ catala Interpret -s A
[RESULT] Computation successful! Results:
[RESULT] s = S { -- x: 1 -- y: 2 }
[RESULT] z = 3
```
```catala-test-inline
$ catala Interpret_Lcalc -s A --avoid-exceptions --optimize
[RESULT] Computation successful! Results:
[RESULT] s = S { -- x: 1 -- y: 2 }
[RESULT] z = 3
```
