tests/test_struct/bad/nonexisting_struct.catala_en
## Article

```catala
declaration structure Foo:
  data f content integer

declaration scope A:
  context x content Foo
  context y content integer

scope A:
  definition x equals Foo { -- f: 1 }
  definition y equals x.Fo.f
```

```catala-test-inline
$ catala Interpret -s A
[ERROR] Struct Fo has not been defined before

  --> tests/test_struct/bad/nonexisting_struct.catala_en
   | 
13 |   definition y equals x.Fo.f
   |                         ^^
   + Article
```
